# Go-Engine

./: Cargo.toml  index.html
assets/: index-Ai5tVHic.js  index-CGVKp0NT.css  index-D-jWj33S.js  index-D9oNJVVb.css  index-VtsaKCZk.js  index-XAeRA-Ni.js
engine/: Cargo.toml
engine [DEPRECATED]/: Cargo.toml
engine [DEPRECATED]/src/: api.rs  engine.rs  gtp.rs
engine/src/: api.rs  board.rs  engine.rs  gtp.rs  lib.rs  tests.rs
engine_DEPRECATED/src/: board.rs  engine.rs  gtp.rs  lib.rs
src/: board.rs  engine.rs  groups.rs  gtp.rs  main.rs  tests.rs  update.rs
src/view/: mod.rs
